--- a/src/app/teacher/teachers.component.html
+++ b/src/app/teacher/teachers.component.html
@@ -1,1 +1,4 @@
-<p>teachers works!</p>
+<button mat-raised-button (click)="registerTeacher()">Register</button>
+<button mat-raised-button (click)="viewTeachers()">View Teachers</button>
+
+<ng-template #formRegister></ng-template>
