--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     <mat-toolbar >Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item class="bg-body-secondary" routerLink="student">Student</a>
-      <a mat-list-item class="bg-body-secondary" href="#">Teacher</a>
+      <a mat-list-item class="bg-body-secondary" routerLink="teacher">Teacher</a>
       <a mat-list-item class="bg-body-secondary" href="#">Courses</a>
     </mat-nav-list>
   </mat-sidenav>
