--- a/src/app/student/student/student.component.html
+++ b/src/app/student/student/student.component.html
@@ -1,7 +1,7 @@
 <!--<p>student works!</p>-->
 
-<button mat-raised-button routerLink="register">Register</button>
-<button mat-raised-button routerLink="viewStudent">View Students</button>
+<button mat-raised-button routerLink="">Register</button>
+<button mat-raised-button routerLink="view">View Students</button>
 <router-outlet></router-outlet>
 <!--<wije-table [tableDataSourse]="studentList"></wije-table>-->
 <!--<wije-register (studentsList)="studentsList($event)"></wije-register>-->
