Courses component added and navigation coded.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
     <mat-nav-list>
       <a mat-list-item class="bg-body-secondary" routerLink="student">Student</a>
       <a mat-list-item class="bg-body-secondary" routerLink="teacher">Teacher</a>
-      <a mat-list-item class="bg-body-secondary" href="#">Courses</a>
+      <a mat-list-item class="bg-body-secondary" routerLink="course">Courses</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
