--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,16 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.example-form {
+  min-width: 150px;
+  /*max-width: 500px;*/
+  width: 100%;
+}
+
+.example-full-width {
+  width: 100%;
+}
+.file-name {
+  margin-left: 1rem; /* or whatever margin you require */
+}
