--- a/src/app/teacher/teachers.component.html
+++ b/src/app/teacher/teachers.component.html
@@ -1,4 +1,5 @@
-<button mat-raised-button (click)="registerTeacher()">Register</button>
-<button mat-raised-button (click)="viewTeachers()">View Teachers</button>
+<button mat-raised-button  (click)="navigate(1)">Register</button>
+<button mat-raised-button (click)="navigate(2)">View Teachers</button>
 
-<ng-template #formRegister></ng-template>
+<wije-register *ngIf="!showReg" (dataOutput)="saveTeacher($event)" [title]="'Teacher'"></wije-register>
+<wije-table [allData]="teachersList" *ngIf="showReg"></wije-table>
