subject component created and routing coded.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item class="bg-body-secondary" routerLink="student">Student</a>
       <a mat-list-item class="bg-body-secondary" routerLink="teacher">Teacher</a>
       <a mat-list-item class="bg-body-secondary" routerLink="course">Courses</a>
+      <a mat-list-item class="bg-body-secondary" routerLink="subject">Subject</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
