--- a/src/app/courses/subject/subject.component.html
+++ b/src/app/courses/subject/subject.component.html
@@ -1,1 +1,59 @@
-<p>subject works!</p>
+
+<div class="subject-container">
+  <div>
+    <form [formGroup]="registerSubject" (ngSubmit)="addSubject(registerSubject)" (reset)="resetForm(registerSubject)">
+      <mat-form-field>
+        <mat-label>Subject ID</mat-label>
+        <input type="text" matInput formControlName="id" placeholder="Sub-001">
+        <mat-error *ngIf="registerSubject.get('id')?.hasError('required')">
+          ID field is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field class="example-full-width">
+        <mat-label>Subject Name</mat-label>
+        <input type="text" matInput formControlName="name" placeholder="Angular">
+        <mat-error *ngIf="registerSubject.get('name')?.hasError('required')">
+          Name field is <strong>required</strong>
+        </mat-error>
+      </mat-form-field>
+
+      <tr *ngIf="selectedImageURL">
+        <mat-card aria-colspan="2" class="example-card example-header-image">
+          <img mat-card-image [src]="selectedImageURL" alt=selectedImage.files?.item(0).name)>
+        </mat-card>
+      </tr>
+
+<!--      image upload-->
+
+      <div class="example-button-row">
+        <button class="btn-width" type="reset" mat-raised-button color="warn">Reset</button>
+        <button class="btn-width" mat-raised-button color="primary">Register</button>
+      </div>
+    </form>
+  </div>
+  <div>
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID. </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Name. </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+
+      <ng-container matColumnDef="image">
+        <th mat-header-cell *matHeaderCellDef> Image. </th>
+        <td mat-cell *matCellDef="let element"> {{element.image}} </td>
+      </ng-container>
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+
+  </div>
+</div>
