Course cards created.

--- a/src/app/courses/course.component.html
+++ b/src/app/courses/course.component.html
@@ -1,2 +1,5 @@
-<button mat-raised-button routerLink="register">Register</button>
-<router-outlet></router-outlet>
+<!--<button mat-raised-button routerLink="register">Register</button>-->
+<!--<router-outlet></router-outlet>-->
+
+<wije-course-card-container [courses]="courses"></wije-course-card-container>
+<!--<wije-register-course></wije-register-course>-->
