Login page created

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<wije-navbar></wije-navbar>
+<wije-login></wije-login>
+
+<!--<wije-navbar></wije-navbar>-->
 <!--<wije-card-nav class="scrollable-container"></wije-card-nav>-->
