--- a/src/app/courses/register-course/register-course.component.html
+++ b/src/app/courses/register-course/register-course.component.html
@@ -1,3 +1,5 @@
+<h1 class="h1 p-2 fw-bold">{{"Course" | uppercase}} REGISTRATION FORM</h1>
+
 <form [formGroup]="registerCourse" class="example-form">
 
   <mat-form-field>
