--- a/src/app/courses/view/course-card-container/course-card-container.component.css
+++ b/src/app/courses/view/course-card-container/course-card-container.component.css
@@ -4,11 +4,5 @@
   display: flex;
 }
 .wije-container::-webkit-scrollbar {
-  width: 200px;
-  height: 200px;
-}
-.drag-boundry-container {
-  overflow: hidden;
-  width: 100%;
-  display: flex;
+  background-color: #dbd7d7;
 }
