--- a/src/styles.css
+++ b/src/styles.css
@@ -17,5 +17,5 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 .btn-width{
   min-width: 100px;
-  margin: 1rem;
+  margin: 1rem 0;
 }
