Seperate login guards add to student and teacher.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<wije-login></wije-login>
+<!--<wije-login></wije-login>-->
 
-<!--<wije-navbar></wije-navbar>-->
+<wije-navbar></wije-navbar>
 <!--<wije-card-nav class="scrollable-container"></wije-card-nav>-->
