--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,10 +5,10 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar >Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item class="bg-body-secondary" routerLink="student">Student</a>
-      <a mat-list-item class="bg-body-secondary" routerLink="teacher">Teacher</a>
-      <a mat-list-item class="bg-body-secondary" routerLink="course">Courses</a>
-      <a mat-list-item class="bg-body-secondary" routerLink="subject">Subject</a>
+      <a mat-list-item class="bg-body-secondary" routerLink="/student">Student</a>
+      <a mat-list-item class="bg-body-secondary" routerLink="/teacher">Teacher</a>
+      <a mat-list-item class="bg-body-secondary" routerLink="/course">Courses</a>
+      <a mat-list-item class="bg-body-secondary" routerLink="/subject">Subject</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
