Refactor to create multiple modules.

--- a/src/app/courses/course-container/course-container.component.html
+++ b/src/app/courses/course-container/course-container.component.html
@@ -1,4 +1,4 @@
 <ng-content select="wije-course-header"></ng-content>
 <ng-content select="wije-course-card-container"></ng-content>
 <ng-content select="wije-register-course"></ng-content>
-
+<!--<input type="text" [(ngModel)]="value">-->
