--- a/src/app/student/student/student.component.html
+++ b/src/app/student/student/student.component.html
@@ -3,3 +3,5 @@
 
 <wije-register *ngIf="!showReg" [title]="'Student'" (dataOutput)="addStudent($event)"></wije-register>
 <wije-table *ngIf="showReg" [allData]="studentList"></wije-table>
+
+<!--<input type="text" wijeEmailValidatorDirective>-->
