--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <mat-sidenav-container class="sidenav-container">
   <mat-sidenav #drawer class="sidenav" fixedInViewport
-      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
-      [mode]="(isHandset$ | async) ? 'over' : 'side'"
-      [opened]="(isHandset$ | async) === false">
-    <mat-toolbar >Menu</mat-toolbar>
+               [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
+               [mode]="(isHandset$ | async) ? 'over' : 'side'"
+               [opened]="(isHandset$ | async) === false">
+    <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item class="bg-body-secondary" routerLink="/student">Student</a>
-      <a mat-list-item class="bg-body-secondary" routerLink="/teacher">Teacher</a>
+      <a *ngIf="isStudent" mat-list-item class="bg-body-secondary" routerLink="/student">Student</a>
+      <a *ngIf="isTeacher" mat-list-item class="bg-body-secondary" routerLink="/teacher">Teacher</a>
       <a mat-list-item class="bg-body-secondary" routerLink="/course">Courses</a>
-      <a mat-list-item class="bg-body-secondary" routerLink="/subject">Subject</a>
+      <a *ngIf="isTeacher" mat-list-item class="bg-body-secondary" routerLink="/subject">Subject</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
