--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!--<wije-login></wije-login>-->
+<!--<wije-login (logEvent)="isLoggedIn = $event" *ngIf="!isLoggedIn" ></wije-login>-->
+<!--<wije-navbar *ngIf="isLoggedIn"></wije-navbar>-->
 
-<wije-navbar></wije-navbar>
-<!--<wije-card-nav class="scrollable-container"></wije-card-nav>-->
+<wije-dashboard></wije-dashboard>
